--- a/style.css
+++ b/style.css
@@ -20,14 +20,33 @@ body {
 }
 
 .display {
+    display: flex;
     box-sizing: border-box;
     height: 200px;
     background-color: aliceblue;
     text-align: right;
-    padding-right: 30px;
-    padding-top: 125px;
-    font-size: 45px; 
+    flex-direction: column;
+    font-size: 50px; 
 }
+
+.number-display, .operator-display {
+    display: flex;
+    height: 50px;
+    flex-direction: column;
+    background-color:aliceblue;
+    flex: 1;
+    padding-right: 30px;
+}
+
+.operator-display {
+    font-size: 30px;
+    justify-content: center;
+}
+
+.number-display {
+    justify-content: center;
+}
+
 
 .buttons {
     margin-top: 1.5px;
@@ -37,8 +56,7 @@ body {
     width: 500px; 
 }
 
-.row-two, .row-three, .row-four, .row-five {
-    
+.row-two, .row-three, .row-four, .row-five { 
     flex: 1;
     padding-left: 1px;
     background-color:rgb(131, 166, 232);
@@ -50,7 +68,6 @@ body {
 }
 
 .key {
-   
     justify-content: center;
     align-items: center;
     display: flex;
@@ -67,6 +84,19 @@ body {
     align-items: center;
     display: flex;
     height: 223px;
+    text-align: center;
+    margin-top: 1px;
+    font-size: 26px;
+    padding: 1px;
+    background-color: azure;
+}
+
+
+.num-key {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 110px;
     text-align: center;
     margin-top: 1px;
     font-size: 26px;
