only a single decimal point allowed

--- a/style.css
+++ b/style.css
@@ -19,14 +19,13 @@ body {
     padding: 2px;
 }
 
-
-
 .buttons {
     margin-top: 1.5px;
     display:flex;
     flex: 1;
     background-color: aliceblue;
-    width: 500px; 
+    width: 500px;
+    user-select: none;
 }
 
 .row-two, .row-three, .row-four, .row-five { 
@@ -89,7 +88,6 @@ body {
     margin-right: 2px;
 }
 
-
 .display {
     display: flex;
     box-sizing: border-box;
@@ -115,10 +113,8 @@ body {
     justify-content: flex-end;
     display: flex;
     height: 50px;
-    
     background-color:aliceblue;
-    flex: 1;
-    
+    flex: 1;  
 }
 
 .number-display {
