resolved conflict between listeners for equals and operator keys which caused the keyArray to store too many values and evaluate an incorrect result

--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ body {
     background-color:whitesmoke;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color:rgb(97, 129, 188);
+    
+}
+
+.to-infinity {
+    font-size: 36px;
 }
 
 .calc-container {
