restricted size of input value for both top and bottom parts of the number display to stop div content over-flowing

--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@ body {
     height: 100%;
     background-color:whitesmoke;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color:rgb(97, 129, 188);
-    
+    color:rgb(97, 129, 188);  
 }
 
 .to-infinity {
@@ -68,7 +67,6 @@ body {
     background-color: azure;
 }
 
-
 .num-key {
     justify-content: center;
     align-items: center;
@@ -100,7 +98,8 @@ body {
     background-color: aliceblue;
     text-align: right;
     flex-direction: column;
-    font-size: 50px; 
+    font-size: 50px;
+    user-select: none;
 }
 
 .number-display {
